--- a/public/styles.css
+++ b/public/styles.css
@@ -13,6 +13,12 @@
   text-align: center;
 }
 
+.scroll
+{
+    max-height: 400px;
+    overflow-y: scroll;
+}
+
 .header > p {
   text-align: center;
 }
