--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -47,8 +47,9 @@
 
   <div class="ui raised very padded text container segment">
     <h2 class="ui header">College Advisor</h2>
-    <h2 class="ui header blue"><u> Computer Science Major </u> </h2>
+<h2 class="ui header blue"><u> Computer Science Major </u> </h2>
 
+<div class="scroll">
     <form method="post">
       <table class="ui fixed single line celled table">
         <thead>
@@ -82,6 +83,16 @@
           <tr class="center aligned">
             <td>
               <div class="ui center checkbox">
+                <input type="checkbox" name="course" value="COSC290">
+                <label></label>
+              </div>
+            </td>
+            <td>COSC290</td>
+            <td>4</td>
+          </tr>
+          <tr class="center aligned">
+            <td>
+              <div class="ui center checkbox">
                 <input type="checkbox" name="course" value="COSC336">
                 <label></label>
               </div>
@@ -89,11 +100,63 @@
             <td>COSC336</td>
             <td>4</td>
           </tr>
+          <tr class="center aligned">
+            <td>
+              <div class="ui center checkbox">
+                <input type="checkbox" name="course" value="COSC350">
+                <label></label>
+              </div>
+            </td>
+            <td>COSC350</td>
+            <td>3</td>
+          </tr>
+          <tr class="center aligned">
+            <td>
+              <div class="ui center checkbox">
+                <input type="checkbox" name="course" value="COSC412">
+                <label></label>
+              </div>
+            </td>
+            <td>COSC412</td>
+            <td>3</td>
+          </tr>
+          <tr class="center aligned">
+            <td>
+              <div class="ui center checkbox">
+                <input type="checkbox" name="course" value="COSC439">
+                <label></label>
+              </div>
+            </td>
+            <td>COSC439</td>
+            <td>3</td>
+          </tr>
+            <tr class="center aligned">
+              <td>
+                <div class="ui center checkbox">
+                  <input type="checkbox" name="course" value="COSC455">
+                  <label></label>
+                </div>
+              </td>
+              <td>COSC455</td>
+              <td>3</td>
+            </tr>
+              <tr class="center aligned">
+                <td>
+                  <div class="ui center checkbox">
+                    <input type="checkbox" name="course" value="COSC457">
+                    <label></label>
+                  </div>
+                </td>
+                <td>COSC457</td>
+                <td>3</td>
+          </tr>
+
+
         </tbody>
       </table>
     </form>
   </div>
-
+</div>
 
 
 
