Fix contacts.ejs to contact.ejs

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
 <head>
     <style>
-        textarea{
-            width: 300px;
+        .width{
+            width: 70%;
         }
     </style>
     <meta charset="utf-8">
@@ -51,7 +51,9 @@
         <div class="ui form">
             <div class="field">
                 <label>Send us a message</label>
+                <div class="width">
                 <textarea rows="3" cols="1"></textarea>
+                </div>
             </div>
             <div class="ui button" tabindex="0">Submit</div>
         </div>
