Fix header on dashboard to have working feedback and contact buttons

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -22,11 +22,11 @@
         <i class="home icon"></i>
         Home
       </a>
-    <a class="item">
+    <a href="/feedback" class="item">
         <i class="coffee icon"></i>
         Feedback
       </a>
-    <a class="item">
+    <a href="/contact" class="item">
           <i class="envelope icon"></i>
         Contact Us
       </a>
