--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -57,10 +57,10 @@
         <p>MAKING ADVISING EASY FOR STUDENTS </p>
 
         <div class="containerLogo">
-            <p><i class="fab fa-facebook-f fa-3x"></i></p>
-            <p><i class="fab fa-google fa-3x"></i></p>
-            <p><i class="fab fa-twitter fa-3x"></i></p>
-        </div>
+          <a href="https://www.facebook.com/collegeadvisorproject" target="_blank"><i class="fab fa-facebook-f fa-3x"></i></a>
+          <a href="https://www.towson.edu/academicadvising/" target="_blank"><i class="fab fa-google fa-3x"></i></a>
+          <a href="https://twitter.com/" target="_blank"> <i class="fab fa-twitter fa-3x"></i></a>
+          </div>
     </div>
     <p>&copy; 2018 Team Fabulous</p>
 
