--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -76,6 +76,36 @@
                 <label>I wish to remain anonymous.</label>
             </div>
         </div>
+
+        <div class="field">
+            <label>What did you like most about this website?</label>
+            <textarea rows="2"></textarea>
+        </div>
+        <div class="field">
+            <label>What do you think can be improved on this website?</label>
+            <textarea rows="2"></textarea>
+        </div>
+        <div class="field">
+            <label>Did you find this website visually appealing?</label>
+            <textarea rows="2"></textarea>
+        </div>
+        <div class="ui form">
+            <div class="field">
+                <label>How likely are you to refer this to a friend?</label>
+                <div class="ui selection dropdown">
+                    <input name="referral">
+                    <i class="dropdown icon"></i>
+                    <div class="default text">How likely...?</div>
+                    <div class="menu">
+                        <div class="item" data-value="1">Highly unlikely</div>
+                        <div class="item" data-value="0">Unlikely</div>
+                        <div class="item" data-value="2">Not sure</div>
+                        <div class="item" data-value="3">Likely</div>
+                        <div class="item" data-value="4">Highly likely</div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <button class="ui button" type="submit">Submit</button>
     </form>
 
