Fix Login Issue

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -50,7 +50,7 @@
     <div align="center">
 
       <div class="ui form">
-        <form method="POST" action="/contact">
+        <form method="POST" action="contact">
         <div class="field">
           <label>Send us a message</label>
           <div class="width">
