--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -30,7 +30,7 @@
           <i class="envelope icon"></i>
         Contact Us
       </a>
-    <a class="item">
+    <a href="https://www.facebook.com/collegeadvisorproject" target="_blank" class="item">
     <i class="facebook large icon"></i>
         Facebook Page</a>
     <a class="item">
@@ -627,10 +627,10 @@
       }
     </script>
 
-
+    <div class="ui segment">
  <h3 id="tuition"></h3>
  <h3 id="creditsLeft"></h3>
-
+</div>
   </div>
   <div class="ui blue inverted very padded segment">
     <div class="containerLogo">
