--- a/views/login.ejs
+++ b/views/login.ejs
@@ -43,7 +43,6 @@
         <p><i class="book extra large icon"></i></p>
       </div>
       <form  action="/auth/local" method="post" class="ui form attached fluid segment">
-
         <div class="field">
           <label><span class="size">Email</span></label>
           <input placeholder="School Email @students.towson.edu" type="text" class="form-control" name="email">
@@ -55,10 +54,10 @@
         <div class="field">
         </div>
         <div class="wrapper">
-          <button type="submit" class="ui blue submit button">Login</button>
+          <a href="/dashboard" type="submit" class="ui blue submit button"> Login </a>
 
           <p id="googlePadding">
-            <a href="/auth/google" class="ui blue submit button">Login With Google</a>
+            <a href="/auth/google" type="submit" class="ui blue submit button">Login With Google</a>
           </p>
 
         </div>
