Add Email Function to Feedback Page

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -22,7 +22,10 @@
 
 <body>
   <div class="ui tiny attached menu">
-    <a href="/" class="active item">
+    <div class="header item">
+  WOWZA Advisor
+</div>
+    <a href="/" class="item">
         <i class="home icon"></i>
         Home
     </a>
@@ -33,9 +36,7 @@
     <a class="item">
         <i class="facebook large icon"></i>
         Facebook Page</a>
-    <a class="item">
-        <i class="facebook messenger large icon"></i>
-        Message 24/7 </a>
+
     <div class="right menu">
       <div class="item">
         <a href="/api/logout" class="ui primary button">Logout</a>
