--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -18,6 +18,9 @@
 
 
   <div class="ui tiny attached menu">
+    <div class="header item">
+  WOWZA Advisor
+</div>
     <a class="active item">
         <i class="home icon"></i>
         Home
@@ -33,9 +36,7 @@
     <a href="https://www.facebook.com/collegeadvisorproject" target="_blank" class="item">
     <i class="facebook large icon"></i>
         Facebook Page</a>
-    <a class="item">
-      <i class="facebook messenger large icon"></i>
-          Message  24/7 </a>
+
     <div class="right menu">
       <div class="item">
         <a href="/api/logout" class="ui primary button">Logout</a>
