Fix Google Links

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -642,7 +642,7 @@
 
       <div class="containerLogo">
         <a href="https://www.facebook.com/collegeadvisorproject" target="_blank"><i class="fab fa-facebook-f fa-3x"></i></a>
-        <a href="https://www.towson.edu/academicadvising/" target="_blank"><i class="fab fa-google fa-3x"></i></a>
+        <a href="https://plus.google.com/114965583372651654240" target="_blank"><i class="fab fa-google fa-3x"></i></a>
         <a href="https://twitter.com/" target="_blank"> <i class="fab fa-twitter fa-3x"></i></a>
       </div>
     </div>
