Fix Google Links

--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -33,7 +33,7 @@ WOWZA Advisor
         <i class="envelope icon"></i>
         Contact Us
     </a>
-    <a class="item">
+    <a href="https://www.facebook.com/collegeadvisorproject"  class="item">
         <i class="facebook large icon"></i>
         Facebook Page</a>
 
