--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -33,7 +33,7 @@
         <i class="coffee icon"></i>
         Feedback
     </a>
-    <a class="item">
+    <a href="https://www.facebook.com/collegeadvisorproject" class="item">
         <i class="facebook large icon"></i>
         Facebook Page</a>
 
