--- a/views/home.ejs
+++ b/views/home.ejs
@@ -58,7 +58,7 @@
         </div>
         <div class="field">
           <label><span class="size">Email</span></label>
-          <input placeholder="School Email @students.towson.edu" type="text" class="form-control" name="email">
+          <input placeholder="School Email @students.towson.edu" pattern=".+@students.towson.edu" title="Please use a @students.towson.edu email!" type="text" class="form-control" name="email">
         </div>
         <div class="field">
           <label><span class="size">Password</span></label>
